v1.10.x/connectors/ml-model/mlflow.mdx
---
title: MLflow Connector | OpenMetadata ML Model Integration
description: Connect MLflow to OpenMetadata seamlessly with our comprehensive connector guide. Learn setup, configuration, and ML model metadata integration in minutes.
sidebarTitle: Overview
---
import ConfigureIngestion from '/snippets/connectors/ml-model/configure-ingestion.mdx'
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import TestConnection from '/snippets/connectors/test-connection.mdx'
import IngestionScheduleAndDeploy from '/snippets/connectors/ingestion-schedule-and-deploy.mdx'
import { MetadataIngestionUi } from '/snippets/components/MetadataIngestionUi.jsx'

<ConnectorDetailsHeader
icon='/public/images/connectors/mlflow.webp'
name="MLflow"
stage="PROD"
availableFeatures={["ML Features", "Hyperparameters", "ML Store"]}
unavailableFeatures={[]} />
In this section, we provide guides and references to use the MLflow connector.
Configure and schedule MLflow metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Troubleshooting](/v1.10.x/connectors/ml-model/mlflow/troubleshooting)
## Requirements
To extract metadata, OpenMetadata needs two elements:
- **Tracking URI**: Address of local or remote tracking server. More information on the MLflow documentation [here](https://www.mlflow.org/docs/latest/tracking.html#where-runs-are-recorded)
- **Registry URI**: Address of local or remote model registry server.
## Metadata Ingestion
<MetadataIngestionUi connector={"MLflow"} selectServicePath={"/public/images/connectors/mlflow/select-service.png"} addNewServicePath={"/public/images/connectors/mlflow/add-new-service.png"} serviceConnectionPath={"/public/images/connectors/mlflow/service-connection.png"} />
# Connection Details
<Steps>
<Step title="Connection Details">
<Tip>
When using a **Hybrid Ingestion Runner**, any sensitive credential fields—such as passwords, API keys, or private keys—must reference secrets using the following format:
```
password: secret:/my/database/password
```
This applies **only to fields marked as secrets** in the connection form (these typically mask input and show a visibility toggle icon).
For a complete guide on managing secrets in hybrid setups, see the [Hybrid Ingestion Runner Secret Management Guide](https://docs.getcollate.io/getting-started/day-1/hybrid-saas/hybrid-ingestion-runner#3.-manage-secrets-securely).
</Tip>
- **trackingUri**: Mlflow Experiment tracking URI. E.g., http://localhost:5000
- **registryUri**: Mlflow Model registry backend. E.g., mysql+pymysql://mlflow:password@localhost:3307/experiments
</Step>
<TestConnection />
<ConfigureIngestion />
<IngestionScheduleAndDeploy />
</Steps>
